# Jupyter-Book-2-plotly-optimized-rendering

./: README.md  index.md  main.py  myst.yml  non_optimized.md  optimized.md  plot_generator.py  pyproject.toml
.github/workflows/: deploy.yml
_static/: custom.css  theme-plotly.js
